feat: 홈페이지, 회원가입 페이지 추가 및 회원가입 api 작성

--- a/coffee_delivery/frontend/src/styles/NaviBar.module.css
+++ b/coffee_delivery/frontend/src/styles/NaviBar.module.css
@@ -94,6 +94,19 @@ header > nav > ul > ul {
     gap: 20px;
 }
 
+.right_ul > ul > div {
+    position: relative;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    cursor: pointer;
+    width: 38px;
+    padding: 4px;
+}
+
+
 header > nav > ul > ul > li {
     position: relative;
     display: flex;
